👻Finished the code for my App BIO 👻

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">Hello Squirrel</string>
 
-    <string name="first_name">FIRST</string>
-    <string name="last_name">LAST</string>
+    <string name="first_name">Bryan</string>
+    <string name="last_name">Tineo</string>
     <string name="full_name">%s %s</string>
 
-    <string name="profile_bio_text">This a short bio about myself.\nIt has multiple lines because I am\na complex being.</string>
+    <string name="profile_bio_text">Hi! I am Bryan Tineo👋.\nI am computer science major @ CSULB minoring in cybersecurity\n I am a passionate CS student who like creating and learning👻.</string>
 
     <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
-    <string name="profile_hobby_first_text">🥇 FIRST HOBBY</string>
-    <string name="profile_hobby_second_text">🥈 SECOND HOBBY</string>
-    <string name="profile_hobby_third_text">🥉 THIRD HOBBY</string>
+    <string name="profile_hobby_first_text">🥇 Creating Coding Projects🧑‍💻</string>
+    <string name="profile_hobby_second_text">🥈 Play Guitar🎸</string>
+    <string name="profile_hobby_third_text">🥉 Play Video Games🎮🕹️</string>
 </resources>
